<resources>
    <string name="app_name">Book2Play</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="age">Age</string>
    <string name="welcomeMsg">Book sports courts near you\nand read trusted player reviews</string>
    <string name="startMsg">get started</string>
    <string name="noAccount">Don\'t have an account? </string>
    <string name="register">Register</string>
    <string name="changeLanguage">Change Language</string>
    <string name="birthDate">Date of Birth</string>
    <string name="AppTitle">Book2Play</string>
    <string name="category">Category</string>
    <string name="region">Region</string>
    <string name="day">Day</string>
    <string name="from">Available from</string>
    <string name="to">Available to</string>
    <string name="validation_fail">Invalid data added to form please check again!</string>
    <string name="searchLocation">Search around me</string>
    <string name="rate">Rate</string>
    <string name="rating">Rating:</string>
    <string name="availableFrom">Available from: </string>
    <string name="comments">Comments</string>
    <string name="reservations">Reservations</string>
    <string name="directions">Directions</string>
    <string name="reserve">Reserve</string>
    <string name="done">Done</string>
    <string name="details">Details</string>
    <string name="routes">Routes</string>
    <string name="ratedLocations">Rated locations</string>
    <string name="avgRating">Average Rating</string>
    <string name="signOut">Sign out</string>
    <string name="changeMap">Change map view</string>
    <string name="comment">Write a comment</string>
    <string name="information">Information</string>
    <string name="locations_permission_deny">To enable your location please visit Settings</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="error_while_searching">Error while searching</string>
    <string name="register_error">Please enter matching passwords</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="camera_forbidden">Access to camera was denied</string>
    <string name="camera_failed">Error with the camera</string>
    <string name="invalid_registration">Please make sure that you enter a valid email and your last name and first name are over 6 letters</string>
    <string name="no_current_reservations">There are no current reservations</string>
</resources>