<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <TextView
            android:id="@+id/errorWhileRegistering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/firstNameEditText"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@+id/errorWhileRegistering"
            android:textColor="@color/errorRed"
            android:visibility="gone" />

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/lastNameEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="33dp"
            android:background="@drawable/round_input"
            android:drawableLeft="@mipmap/user_alt"
            android:gravity="center"
            android:hint="@string/first_name"
            android:paddingLeft="50dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/round_button"
            android:text="@string/register"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/emailEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/round_input"
            android:drawableLeft="@mipmap/user_alt"
            android:gravity="center"
            android:hint="@string/last_name"
            android:paddingLeft="50dp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/passwordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/round_input"
            android:drawableLeft="@mipmap/user_alt"
            android:gravity="center"
            android:hint="@string/email"
            android:paddingLeft="50dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/confirmPasswordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="29dp"
            android:background="@drawable/round_input"
            android:drawableLeft="@mipmap/pass_icon"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingLeft="50dp" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/dobDatePicker"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="33dp"
            android:background="@drawable/round_input"
            android:drawableLeft="@mipmap/pass_icon"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:paddingLeft="50dp" />

        <TextView
            android:id="@+id/dobDatePicker"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/registerButton"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_input"
            android:drawableLeft="@mipmap/calendar"
            android:gravity="center"
            android:hint="@string/birthDate"
            android:paddingLeft="50dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/dobDatePicker"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:visibility="gone" />

    </RelativeLayout>
</RelativeLayout>