<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">

    <RelativeLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">



        <TextView
            android:id="@+id/errorWhileLogging"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_above="@+id/emailEditText"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="411dp"
            android:layout_marginBottom="331dp"
            android:text="@+string/error_while_logging"
            android:textAlignment="center"
            android:textColor="@color/errorRed"
            android:visibility="gone" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/round_input"
            android:layout_above="@id/passwordEditText"
            android:gravity="center"
            android:hint="@string/email"
            android:drawableLeft="@mipmap/user_alt"
            android:paddingLeft="50dp"
            />



        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="100dp"
            android:background="@drawable/round_input"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@mipmap/pass_icon"
            android:paddingLeft="50dp"/>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/passwordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/round_button"
            android:text="@string/login"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:textStyle="bold" />




        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/noAccountText"
                android:gravity="end"
                android:text="@string/noAccount"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerTextView"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/noAccountText"
                android:text="@string/register"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/noAccountText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                />


        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>